--- a/src/it/springmvc-tomcat/pom.xml
+++ b/src/it/springmvc-tomcat/pom.xml
@@ -17,7 +17,6 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<spring-framework.version>5.3.0-SNAPSHOT</spring-framework.version>
-		<tomcat.version>9.0.38-dev</tomcat.version>
 		<start-class>com.example.tomcat.TomcatApplication</start-class>
 	</properties>
 
@@ -39,19 +38,9 @@
 			<exclusions>
 				<exclusion>
 					<groupId>org.apache.tomcat.embed</groupId>
-					<artifactId>tomcat-embed-core</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.apache.tomcat.embed</groupId>
 					<artifactId>tomcat-embed-websocket</artifactId>
 				</exclusion>
 			</exclusions>
-		</dependency>
-
-		<dependency>
-			<groupId>org.apache.tomcat.embed</groupId>
-			<artifactId>tomcat-embed-programmatic</artifactId>
-			<version>${tomcat.version}</version>
 		</dependency>
 
 		<dependency>
@@ -76,8 +65,11 @@
 						<id>optimize-tomcat</id>
 						<phase>package</phase>
 						<goals>
-							<goal>spring-graalvm-optimize</goal>
+							<goal>spring-graalvm-optimize-jar</goal>
 						</goals>
+						<configuration>
+							<enabled>true</enabled>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
